crates/ruff_linter/src/rules/flake8_errmsg/snapshots/ruff_linter__rules__flake8_errmsg__tests__custom.snap
---
source: crates/ruff_linter/src/rules/flake8_errmsg/mod.rs
---
EM101 [*] Exception must not use a string literal, assign to variable first
 --> EM.py:5:24
  |
4 | def f_a():
5 |     raise RuntimeError("This is an example exception")
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove string literal
  |
5 ~     msg = "This is an example exception"
6 ~     raise RuntimeError(msg)
  |
note: This is an unsafe fix and may change runtime behavior

EM102 [*] Exception must not use an f-string literal, assign to variable first
  --> EM.py:18:24
   |
16 | def f_b():
17 |     example = "example"
18 |     raise RuntimeError(f"This is an {example} exception")
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove f-string literal
   |
18 ~     msg = f"This is an {example} exception"
19 ~     raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM103 [*] Exception must not use a `.format()` string directly, assign to variable first
  --> EM.py:22:24
   |
21 | def f_c():
22 |     raise RuntimeError("This is an {example} exception".format(example="example"))
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove `.format()` string
   |
22 ~     msg = "This is an {example} exception".format(example="example")
23 ~     raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM101 [*] Exception must not use a string literal, assign to variable first
  --> EM.py:32:24
   |
30 | def f_msg_defined():
31 |     msg = "hello"
32 |     raise RuntimeError("This is an example exception")
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove string literal
   |
32 ~     msg_0 = "This is an example exception"
33 ~     raise RuntimeError(msg_0)
   |
note: This is an unsafe fix and may change runtime behavior

EM101 [*] Exception must not use a string literal, assign to variable first
  --> EM.py:39:24
   |
37 |         msg = "hello"
38 |
39 |     raise RuntimeError("This is an example exception")
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove string literal
   |
39 ~     msg = "This is an example exception"
40 ~     raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM101 [*] Exception must not use a string literal, assign to variable first
  --> EM.py:46:28
   |
45 |     def nested():
46 |         raise RuntimeError("This is an example exception")
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove string literal
   |
46 ~         msg_0 = "This is an example exception"
47 ~         raise RuntimeError(msg_0)
   |
note: This is an unsafe fix and may change runtime behavior

EM101 [*] Exception must not use a string literal, assign to variable first
  --> EM.py:51:28
   |
49 | def f_fix_indentation_check(foo):
50 |     if foo:
51 |         raise RuntimeError("This is an example exception")
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
52 |     else:
53 |         if foo == "foo":
   |
help: Assign to variable; remove string literal
   |
51 ~         msg = "This is an example exception"
52 ~         raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM102 [*] Exception must not use an f-string literal, assign to variable first
  --> EM.py:54:32
   |
52 |     else:
53 |         if foo == "foo":
54 |             raise RuntimeError(f"This is an exception: {foo}")
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
55 |     raise RuntimeError("This is an exception: {}".format(foo))
   |
help: Assign to variable; remove f-string literal
   |
54 ~             msg = f"This is an exception: {foo}"
55 ~             raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM103 [*] Exception must not use a `.format()` string directly, assign to variable first
  --> EM.py:55:24
   |
53 |         if foo == "foo":
54 |             raise RuntimeError(f"This is an exception: {foo}")
55 |     raise RuntimeError("This is an exception: {}".format(foo))
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove `.format()` string
   |
55 ~     msg = "This is an exception: {}".format(foo)
56 ~     raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM101 Exception must not use a string literal, assign to variable first
  --> EM.py:59:28
   |
58 | # Report these, but don't fix them
59 | if foo: raise RuntimeError("This is an example exception")
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 | if foo: x = 1; raise RuntimeError("This is an example exception")
   |
help: Assign to variable; remove string literal

EM101 Exception must not use a string literal, assign to variable first
  --> EM.py:60:35
   |
58 | # Report these, but don't fix them
59 | if foo: raise RuntimeError("This is an example exception")
60 | if foo: x = 1; raise RuntimeError("This is an example exception")
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove string literal

EM102 [*] Exception must not use an f-string literal, assign to variable first
  --> EM.py:64:24
   |
63 | def f_triple_quoted_string():
64 |     raise RuntimeError(f"""This is an {"example"} exception""")
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Assign to variable; remove f-string literal
   |
64 ~     msg = f"""This is an {"example"} exception"""
65 ~     raise RuntimeError(msg)
   |
note: This is an unsafe fix and may change runtime behavior

EM103 [*] Exception must not use a `.format()` string directly, assign to variable first
  --> EM.py:76:9
   |
74 |   def f_multi_line_string2():
75 |       raise RuntimeError(
76 | /         "This is an {example} exception".format(
77 | |             example="example"
78 | |         )
   | |_________^
79 |       )
   |
help: Assign to variable; remove `.format()` string
   |
75 ~     msg = (
76 +         "This is an {example} exception".format(
77 +             example="example"
78 +         )
79 +     )
80 ~     raise RuntimeError(
81 ~         msg
   |
note: This is an unsafe fix and may change runtime behavior

EM103 [*] Exception must not use a `.format()` string directly, assign to variable first
  --> EM.py:84:9
   |
82 |   def f_multi_line_string2():
83 |       raise RuntimeError(
84 | /         (
85 | |             "This is an "
86 | |             "{example} exception"
87 | |         ).format(
88 | |             example="example"
89 | |         )
   | |_________^
90 |       )
   |
help: Assign to variable; remove `.format()` string
   |
83 ~     msg = (
84 +         (
85 +             "This is an "
86 +             "{example} exception"
87 +         ).format(
88 +             example="example"
89 +         )
90 +     )
91 ~     raise RuntimeError(
92 ~         msg
   |
note: This is an unsafe fix and may change runtime behavior
